# mlops-predictive-maintenance

./: .coverage  .gitignore  5.0  MODEL_CARD.md  Makefile  README.md  dvc.yaml  mlflow.db  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  model_loader.py  schemas.py
configs/: params.yaml
data/raw/: README.txt
docker/: Dockerfile
src/: __init__.py  data_loader.py  evaluate.py  feature_engineering.py  model_card.py  monitor.py  retrain_check.py  train.py  validate.py
tests/: __init__.py  test_api.py  test_data_loader.py  test_feature_engineering.py  test_monitor.py  test_train.py  test_validate.py
