[build-system]
requires = ["setuptools>=69.0", "wheel>=0.43"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "predictive-maintenance-mlops"
version = "1.0.0"
description = "End-to-end MLOps pipeline for turbofan engine Remaining Useful Life (RUL) prediction using NASA C-MAPSS FD001 dataset."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Prathamesh Kadam"},
]
keywords = [
    "mlops",
    "predictive-maintenance",
    "remaining-useful-life",
    "turbofan",
    "xgboost",
    "time-series",
    "drift-monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.1",
    "mlflow>=2.17",
    "evidently>=0.5",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "pandera>=0.21",
    "matplotlib>=3.9",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]
pipeline = [
    "dvc>=3.50",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "api", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src", "api"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
